fixed alignment on top section and added image dimmentions

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -109,21 +109,51 @@ footer {
 @media screen and (min-width: 992px) {
 
     body {
-        grid-template-columns: 1fr 65% 35% 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        padding: 0;
+        margin: 0 auto;
+        grid-template-columns: 2% 63% 33% 2%;
+        grid-template-rows: 80px 1fr 1fr 1fr;
         grid-gap: 2px;
-        grid-template-areas:
-
-        ". company nav ."
-        ". img img ."
-        ". main sub ."
-        ". footer footer ."
+        grid-template-areas: ". company nav ." ". placeholder placeholder ." ". main sub ." ". footer footer ."
     }
+
+    h1 {
+        display: inline;
+        padding: 0;
+        margin: auto 0 0 0;
+    }
+
+nav {
+    display: inline;
+}
+
+li:nth-child(1) {
+    margin-left: 110px;
+}
+
+    li:nth-child(4) {
+        padding-right: 0;
+    }
+
+.nav-links {
+    margin-top: 50px;
+    margin-left: auto;
+}
 
     li {
         margin: 0;
+        background-color: transparent;
+        display: inline;
+    }
 
-        flex-direction: row;
+    li a {
+        margin: 0;
+    }
+
+    .header-img img{
+        width: 100%;
+        height: 532px;
+        margin: 50px 0;
     }
 
     .hidden-on-desktop {
@@ -131,7 +161,6 @@ footer {
         height: 0%;
         width: 0%;
     }
-
 
 
 }
